// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`packAnimal can take an alternative algorithm 1`] = `
Array [
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 10%;
        height: 10%;
        transform: translateX(900%) translateY(900%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":1,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":1,
      \\"e\\":45,
      \\"f\\":45
    }",
    "points": Array [
      Object {
        "x": 45,
        "y": 45,
      },
      Object {
        "x": 50,
        "y": 45,
      },
      Object {
        "x": 47.5,
        "y": 50,
      },
    ],
    "rotate": -0,
    "scale": 1,
    "svgTransform": "matrix(1,0,0,1,45,45)",
    "translateX": 45,
    "translateY": 45,
  },
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 10%;
        height: 10%;
        transform: translateX(790%) translateY(900%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":1,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":1,
      \\"e\\":39.5,
      \\"f\\":45
    }",
    "points": Array [
      Object {
        "x": 39.5,
        "y": 45,
      },
      Object {
        "x": 44.5,
        "y": 45,
      },
      Object {
        "x": 44.5,
        "y": 50,
      },
      Object {
        "x": 39.5,
        "y": 50,
      },
    ],
    "rotate": -0,
    "scale": 1,
    "svgTransform": "matrix(1,0,0,1,39.5,45)",
    "translateX": 39.5,
    "translateY": 45,
  },
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 10%;
        height: 10%;
        transform: translateX(680%) translateY(900%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":1,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":1,
      \\"e\\":34,
      \\"f\\":45
    }",
    "points": Array [
      Object {
        "x": 34,
        "y": 45,
      },
      Object {
        "x": 39,
        "y": 45,
      },
      Object {
        "x": 36.5,
        "y": 50,
      },
    ],
    "rotate": -0,
    "scale": 1,
    "svgTransform": "matrix(1,0,0,1,34,45)",
    "translateX": 34,
    "translateY": 45,
  },
]
`;

exports[`packAnimal can take an alternative algorithm 2`] = `
Array [
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 9%;
        height: 9%;
        transform: translateX(627.7777777777777%) translateY(505.55555555555554%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":0.9,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":0.9,
      \\"e\\":28.25,
      \\"f\\":22.75
    }",
    "points": Array [
      Object {
        "x": 28.25,
        "y": 22.75,
      },
      Object {
        "x": 32.75,
        "y": 22.75,
      },
      Object {
        "x": 30.5,
        "y": 27.25,
      },
    ],
    "rotate": -0,
    "scale": 0.9,
    "svgTransform": "matrix(0.9,0,0,0.9,28.25,22.75)",
    "translateX": 28.25,
    "translateY": 22.75,
  },
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 9%;
        height: 9%;
        transform: translateX(505.55555555555554%) translateY(505.55555555555554%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":0.9,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":0.9,
      \\"e\\":22.75,
      \\"f\\":22.75
    }",
    "points": Array [
      Object {
        "x": 22.75,
        "y": 22.75,
      },
      Object {
        "x": 27.25,
        "y": 22.75,
      },
      Object {
        "x": 27.25,
        "y": 27.25,
      },
      Object {
        "x": 22.75,
        "y": 27.25,
      },
    ],
    "rotate": -0,
    "scale": 0.9,
    "svgTransform": "matrix(0.9,0,0,0.9,22.75,22.75)",
    "translateX": 22.75,
    "translateY": 22.75,
  },
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 9%;
        height: 9%;
        transform: translateX(383.33333333333337%) translateY(505.55555555555554%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":0.9,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":0.9,
      \\"e\\":17.25,
      \\"f\\":22.75
    }",
    "points": Array [
      Object {
        "x": 17.25,
        "y": 22.75,
      },
      Object {
        "x": 21.75,
        "y": 22.75,
      },
      Object {
        "x": 19.5,
        "y": 27.25,
      },
    ],
    "rotate": -0,
    "scale": 0.9,
    "svgTransform": "matrix(0.9,0,0,0.9,17.25,22.75)",
    "translateX": 17.25,
    "translateY": 22.75,
  },
]
`;

exports[`packAnimal can take an alternative algorithm 3`] = `
Array [
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 10%;
        height: 10%;
        transform: translateX(560%) translateY(450%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":1,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":1,
      \\"e\\":28,
      \\"f\\":22.5
    }",
    "points": Array [
      Object {
        "x": 28,
        "y": 22.5,
      },
      Object {
        "x": 33,
        "y": 22.5,
      },
      Object {
        "x": 30.5,
        "y": 27.5,
      },
    ],
    "rotate": -0,
    "scale": 1,
    "svgTransform": "matrix(1,0,0,1,28,22.5)",
    "translateX": 28,
    "translateY": 22.5,
  },
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 10%;
        height: 10%;
        transform: translateX(450%) translateY(450%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":1,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":1,
      \\"e\\":22.5,
      \\"f\\":22.5
    }",
    "points": Array [
      Object {
        "x": 22.5,
        "y": 22.5,
      },
      Object {
        "x": 27.5,
        "y": 22.5,
      },
      Object {
        "x": 27.5,
        "y": 27.5,
      },
      Object {
        "x": 22.5,
        "y": 27.5,
      },
    ],
    "rotate": -0,
    "scale": 1,
    "svgTransform": "matrix(1,0,0,1,22.5,22.5)",
    "translateX": 22.5,
    "translateY": 22.5,
  },
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 10%;
        height: 10%;
        transform: translateX(340%) translateY(450%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":1,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":1,
      \\"e\\":17,
      \\"f\\":22.5
    }",
    "points": Array [
      Object {
        "x": 17,
        "y": 22.5,
      },
      Object {
        "x": 22,
        "y": 22.5,
      },
      Object {
        "x": 19.5,
        "y": 27.5,
      },
    ],
    "rotate": -0,
    "scale": 1,
    "svgTransform": "matrix(1,0,0,1,17,22.5)",
    "translateX": 17,
    "translateY": 22.5,
  },
]
`;

exports[`packAnimal can take an alternative algorithm 4`] = `
Array [
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 11.027953465469182%;
        height: 11.027953465469182%;
        transform: translateX(1017.1165350651291%) translateY(780.0045757549829%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":1.1027953465469182,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":1.1027953465469182,
      \\"e\\":56.08356908828749,
      \\"f\\":43.009270821394914
    }",
    "points": Array [
      Object {
        "x": 56.08356908828749,
        "y": 43.009270821394914,
      },
      Object {
        "x": 61.59754582102208,
        "y": 43.009270821394914,
      },
      Object {
        "x": 58.840557454654785,
        "y": 48.523247554129505,
      },
    ],
    "rotate": -0,
    "scale": 1.1027953465469182,
    "svgTransform": "matrix(1.1027953465469182,0,0,1.1027953465469182,56.08356908828749,43.009270821394914)",
    "translateX": 56.08356908828749,
    "translateY": 43.009270821394914,
  },
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 11.9371299110353%;
        height: 11.9371299110353%;
        transform: translateX(1337.4261086812542%) translateY(938.073969353579%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":1.19371299110353,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":1.19371299110353,
      \\"e\\":79.82514602869273,
      \\"f\\":55.98955419167109
    }",
    "points": Array [
      Object {
        "x": 79.82514602869273,
        "y": 55.98955419167109,
      },
      Object {
        "x": 85.79371098421038,
        "y": 55.98955419167109,
      },
      Object {
        "x": 85.79371098421038,
        "y": 61.95811914718874,
      },
      Object {
        "x": 79.82514602869273,
        "y": 61.95811914718874,
      },
    ],
    "rotate": -0,
    "scale": 1.19371299110353,
    "svgTransform": "matrix(1.19371299110353,0,0,1.19371299110353,79.82514602869273,55.98955419167109)",
    "translateX": 79.82514602869273,
    "translateY": 55.98955419167109,
  },
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 11.659965465776622%;
        height: 11.659965465776622%;
        transform: translateX(1114.4605674451082%) translateY(-254.95613042959434%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":1.1659965465776623,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":1.1659965465776623,
      \\"e\\":64.9728586468989,
      \\"f\\":-14.863898380485551
    }",
    "points": Array [
      Object {
        "x": 64.9728586468989,
        "y": -14.863898380485551,
      },
      Object {
        "x": 70.80284137978721,
        "y": -14.863898380485551,
      },
      Object {
        "x": 67.88785001334305,
        "y": -9.03391564759724,
      },
    ],
    "rotate": -0,
    "scale": 1.1659965465776623,
    "svgTransform": "matrix(1.1659965465776623,0,0,1.1659965465776623,64.9728586468989,-14.863898380485551)",
    "translateX": 64.9728586468989,
    "translateY": -14.863898380485551,
  },
]
`;

exports[`packAnimal can take an alternative algorithm 5`] = `
Array [
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 10%;
        height: 10%;
        transform: translateX(569.7228521061871%) translateY(441.88157471558674%) rotate(10.277322009205808deg)
      ",
    "matrix": "{
      \\"a\\":0.9839557317822614,
      \\"b\\":0.1784127739060031,
      \\"c\\":-0.1784127739060031,
      \\"d\\":0.9839557317822614,
      \\"e\\":28.486142605309354,
      \\"f\\":22.094078735779338
    }",
    "points": Array [
      Object {
        "x": 28.486142605309354,
        "y": 22.094078735779338,
      },
      Object {
        "x": 33.40592126422066,
        "y": 22.986142605309354,
      },
      Object {
        "x": 30.05396806523499,
        "y": 27.459889329455653,
      },
    ],
    "rotate": 10.277322009205808,
    "scale": 1,
    "svgTransform": "matrix(0.9839557317822614,0.1784127739060031,-0.1784127739060031,0.9839557317822614,28.486142605309354,22.094078735779338)",
    "translateX": 28.486142605309354,
    "translateY": 22.094078735779338,
  },
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 10%;
        height: 10%;
        transform: translateX(469.3933269378702%) translateY(436.25651747772247%) rotate(19.35183431021869deg)
      ",
    "matrix": "{
      \\"a\\":0.9435015558440729,
      \\"b\\":0.3313680946014776,
      \\"c\\":-0.3313680946014776,
      \\"d\\":0.9435015558440729,
      \\"e\\":23.46966634689351,
      \\"f\\":21.812825873886123
    }",
    "points": Array [
      Object {
        "x": 23.46966634689351,
        "y": 21.812825873886123,
      },
      Object {
        "x": 28.187174126113874,
        "y": 23.46966634689351,
      },
      Object {
        "x": 26.53033365310649,
        "y": 28.187174126113874,
      },
      Object {
        "x": 21.812825873886123,
        "y": 26.53033365310649,
      },
    ],
    "rotate": 19.35183431021869,
    "scale": 1,
    "svgTransform": "matrix(0.9435015558440729,0.3313680946014776,-0.3313680946014776,0.9435015558440729,23.46966634689351,21.812825873886123)",
    "translateX": 23.46966634689351,
    "translateY": 21.812825873886123,
  },
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 10%;
        height: 10%;
        transform: translateX(356.3579615509906%) translateY(437.8050383954185%) rotate(16.59048588946461deg)
      ",
    "matrix": "{
      \\"a\\":0.9583700005359097,
      \\"b\\":0.28552923155572096,
      \\"c\\":-0.28552923155572096,
      \\"d\\":0.9583700005359097,
      \\"e\\":17.81789807754953,
      \\"f\\":21.890251919770925
    }",
    "points": Array [
      Object {
        "x": 17.81789807754953,
        "y": 21.890251919770925,
      },
      Object {
        "x": 22.60974808022908,
        "y": 23.31789807754953,
      },
      Object {
        "x": 18.786176921110698,
        "y": 27.395925001339776,
      },
    ],
    "rotate": 16.59048588946461,
    "scale": 1,
    "svgTransform": "matrix(0.9583700005359097,0.28552923155572096,-0.28552923155572096,0.9583700005359097,17.81789807754953,21.890251919770925)",
    "translateX": 17.81789807754953,
    "translateY": 21.890251919770925,
  },
]
`;

exports[`packAnimal can take an alternative algorithm 6`] = `
Array [
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 10%;
        height: 10%;
        transform: translateX(450%) translateY(450%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":1,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":1,
      \\"e\\":22.5,
      \\"f\\":22.5
    }",
    "points": Array [
      Object {
        "x": 22.5,
        "y": 22.5,
      },
      Object {
        "x": 27.5,
        "y": 22.5,
      },
      Object {
        "x": 25,
        "y": 27.5,
      },
    ],
    "rotate": -0,
    "scale": 1,
    "svgTransform": "matrix(1,0,0,1,22.5,22.5)",
    "translateX": 22.5,
    "translateY": 22.5,
  },
]
`;
